STAC-17994 Fix exemplar timestamp

--- a/spec/prometheus.api.yaml
+++ b/spec/prometheus.api.yaml
@@ -233,7 +233,7 @@ components:
           type: string
         timestamp:
           type: number
-          format: float
+          format: unix_timestamp
       required:
         - labels
         - value
