Extracted the Admin API into a separate OpenAPI root spec.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ openapi-validate:
     - when: always
   script:
     - nix develop -c openapi-generator-cli validate -i spec/openapi.yaml
+    - nix develop -c openapi-generator-cli validate -i spec/openapi_admin.yaml
 
 openapi-lint:
   extends: .nix-base
@@ -22,6 +23,7 @@ openapi-lint:
     - when: always
   script:
     - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec/openapi.yaml
+    - nix develop -c npx @redocly/openapi-cli@1.0.0-beta.94 lint --config lint_config.yaml spec/openapi_admin.yaml
 
 publish-docs:
   extends: .nix-base
