STAC-16997: Add last update timestamp to monitor representation

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -245,6 +245,9 @@ components:
             type: string
         status:
           $ref: "#/components/schemas/MonitorStatusValue"
+        lastUpdateTimestamp:
+          type: integer
+          format: int64
 
       required:
         - id
