STAC-16997: Make field required

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -257,6 +257,7 @@ components:
         - intervalSeconds
         - tags
         - status
+        - lastUpdateTimestamp
 
     MonitorPatch:
       type: object
