--- a/spec/retention.api.yaml
+++ b/spec/retention.api.yaml
@@ -1,13 +1,13 @@
 # OpenApi header is included in this file to support code highlighting in VSCode
 openapi: 3.0.3
 info:
-  title: Admin API
+  title: Retention API
   version: "1.0.0"
 paths:
-  /admin/retention/window:
+  /retention/window:
     get:
       tags:
-        - admin
+        - retention
       summary: "Get retention window"
       description: "Get StackGraph retention window."
       operationId: getRetentionWindow
@@ -24,7 +24,7 @@ paths:
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
     post:
       tags:
-        - admin
+        - retention
       summary: "Set retention window"
       description: "Set StackGraph retention window and optionally schedule data removal."
       operationId: setRetentionWindow
@@ -49,10 +49,10 @@ paths:
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
-  /admin/retention/currentEpoch:
+  /retention/currentEpoch:
     get:
       tags:
-        - admin
+        - retention
       summary: "Get retention epoch"
       description: "Get StackGraph retention epoch."
       operationId: getRetentionEpoch
@@ -68,10 +68,10 @@ paths:
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
-  /admin/retention/removeExpiredData:
+  /retention/removeExpiredData:
     post:
       tags:
-        - admin
+        - retention
       summary: "Remove expired data from StackGraph"
       description: "Either schedule removal or immediately remove expired data from StackGraph"
       operationId: removeExpiredData
