--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -353,6 +353,8 @@ components:
           type: integer
         _type:
           type: string
+          enum:
+            - MonitorInvalidIntervalError
       required:
         - intervalSeconds
         - _type
