STAC-17785 Rename tag to metrics to get nicer names in generated code

--- a/spec/metrics.api.yaml
+++ b/spec/metrics.api.yaml
@@ -8,7 +8,7 @@ paths:
   /metrics/query:
     get:
       tags:
-        - query
+        - metric
       summary: "Instant query at a single point in time"
       description: "The endpoint evaluates an instant query at a single point in time"
       operationId: getInstantQuery
@@ -29,7 +29,7 @@ paths:
           $ref: "#/components/responses/serviceUnavailable"
     # post:
     #   tags:
-    #     - query
+    #     - metric
     #   summary: "Instant query at a single point in time"
     #   description: "The endpoint evaluates an instant query at a single point in time"
     #   operationId: postInstantQuery
@@ -50,7 +50,7 @@ paths:
   /metrics/query_range:
     get:
       tags:
-        - query
+        - metric
       summary: "Query over a range of time"
       description: "The endpoint evaluates an expression query over a range of time"
       operationId: getRangeQuery
@@ -73,7 +73,7 @@ paths:
           $ref: "#/components/responses/serviceUnavailable"
     # post:
     #   tags:
-    #     - query
+    #     - metric
     #   summary: "Query over a range of time"
     #   description: "The endpoint evaluates an expression query over a range of time"
     #   operationId: postRangeQuery
@@ -94,7 +94,7 @@ paths:
   /metrics/query_exemplars:
     get:
       tags:
-        - query
+        - metric
       summary: "Experimental: Exemplars for a specific time range"
       description: "Experimental: The returns a list of exemplars for a valid PromQL query for a specific time range"
       operationId: getExemplarsQuery
@@ -115,7 +115,7 @@ paths:
           $ref: "#/components/responses/serviceUnavailableExemplar"
     # post:
     #   tags:
-    #     - query
+    #     - metric
     #   summary: "Experimental: Exemplars for a specific time range"
     #   description: "Experimental: The returns a list of exemplars for a valid PromQL query for a specific time range"
     #   operationId: postExemplarsQuery
