--- a/spec/node.xapi.yaml
+++ b/spec/node.xapi.yaml
@@ -52,6 +52,35 @@ paths:
                 $ref: "#/components/schemas/NodeList"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+  /node/{nodeType}/{nodeId}/unlock:
+    post:
+      tags:
+        - node
+      parameters:
+        - in: path
+          name: nodeType
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: nodeId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      summary: "Node unlock API"
+      description: "Unlock a locked node"
+      operationId: unlock
+      responses:
+        "200":
+          description: "Unlocked node"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Node"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+
 components:
   schemas:
 
